--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,15 +1,11 @@
-pipeline {
-   agent {
-       node {
-           stage(‘Deploy’) {
-               ansibleTower (
-                   towerServer: ‘Tower-Prod’,
-                   templateType: ‘job’,
-                   jobTemplate: ‘none’,
-                   importTowerLogs: ‘true’,
-                   inventory: ‘myprod’
+node {
+   stage(‘Deploy’) {
+       ansibleTower (
+       towerServer: ‘Tower-Prod'
+       templateType: ‘job’,
+       jobTemplate: ‘none’,
+       importTowerLogs: ‘true’,
+       inventory: ‘myprod’
                )
-           }
        }
    }
-}
